@@ -3,6 +3,7 @@
 1. Save player settings before opening 'Extra settings'.
 2. Fix highlighting trackof artist with user defined role.
 3. Show user defined roles in track info.
+4. Change genre icon.
 
 5.3.2
 -----
